# go-tools

./: BUILD.bazel  WORKSPACE  deps.bzl
analysis/code/: BUILD.bazel
analysis/edit/: BUILD.bazel
analysis/facts/: BUILD.bazel
analysis/facts/nilness/: BUILD.bazel
analysis/facts/typedness/: BUILD.bazel
analysis/lint/: BUILD.bazel
analysis/report/: BUILD.bazel
cmd/go-module-query/: BUILD.bazel
cmd/keyify/: BUILD.bazel
cmd/rdeps/: BUILD.bazel
cmd/staticcheck/: BUILD.bazel
cmd/structlayout/: BUILD.bazel
cmd/structlayout-optimize/: BUILD.bazel
cmd/structlayout-pretty/: BUILD.bazel
config/: BUILD.bazel
debug/: BUILD.bazel
go/ast/astutil/: BUILD.bazel
go/callgraph/: BUILD.bazel
go/callgraph/cha/: BUILD.bazel
go/callgraph/rta/: BUILD.bazel
go/callgraph/static/: BUILD.bazel
go/gcsizes/: BUILD.bazel
go/ir/: BUILD.bazel
go/ir/irutil/: BUILD.bazel
go/loader/: BUILD.bazel
go/types/typeutil/: BUILD.bazel
internal/cache/: BUILD.bazel
internal/cmd/ast-to-pattern/: BUILD.bazel
internal/cmd/gogrep/: BUILD.bazel
internal/cmd/irdump/: BUILD.bazel
internal/go/gcimporter/: BUILD.bazel
internal/gosmith/: BUILD.bazel
internal/passes/buildir/: BUILD.bazel
internal/renameio/: BUILD.bazel
internal/robustio/: BUILD.bazel
internal/sharedcheck/: BUILD.bazel
internal/sync/: BUILD.bazel
internal/testenv/: BUILD.bazel
knowledge/: BUILD.bazel
lint/testutil/: BUILD.bazel
lintcmd/: BUILD.bazel
lintcmd/runner/: BUILD.bazel
lintcmd/version/: BUILD.bazel
pattern/: BUILD.bazel
printf/: BUILD.bazel
simple/: BUILD.bazel
staticcheck/: BUILD.bazel
structlayout/: BUILD.bazel
stylecheck/: BUILD.bazel
unused/: BUILD.bazel
