load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_tool_library")

go_tool_library(
    name = "simple",
    srcs = [
        "analysis.go",
        "doc.go",
        "lint.go",
    ],
    importpath = "honnef.co/go/tools/simple",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//go/types/typeutil:go_default_library",
        "@co_honnef_go_tools//internal/passes/buildir:go_default_library",
        "@co_honnef_go_tools//internal/sharedcheck:go_default_library",
        "@co_honnef_go_tools//pattern:go_default_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/inspect:go_tool_library",
        "@org_golang_x_tools//go/types/typeutil:go_tool_library",
    ],
)

go_test(
    name = "simple_test",
    srcs = ["lint_test.go"],
    embed = [":simple"],
    deps = ["@co_honnef_go_tools//lint/testutil:go_default_library"],
)
