load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "code",
    srcs = [
        "code.go",
        "visit.go",
    ],
    importpath = "honnef.co/go/tools/analysis/code",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//go/types/typeutil:go_default_library",
        "@co_honnef_go_tools//pattern:go_default_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
        "@org_golang_x_tools//go/analysis/passes/inspect:go_tool_library",
        "@org_golang_x_tools//go/ast/astutil:go_tool_library",
        "@org_golang_x_tools//go/ast/inspector:go_tool_library",
    ],
)
