load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "edit",
    srcs = ["edit.go"],
    importpath = "honnef.co/go/tools/analysis/edit",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//pattern:go_default_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)
