load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_tool_library")

go_tool_library(
    name = "facts",
    srcs = [
        "deprecated.go",
        "directives.go",
        "generated.go",
        "purity.go",
        "token.go",
    ],
    importpath = "honnef.co/go/tools/analysis/facts",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//internal/passes/buildir:go_default_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)

go_test(
    name = "facts_test",
    srcs = ["facts_test.go"],
    embed = [":facts"],
    deps = ["@org_golang_x_tools//go/analysis/analysistest"],
)
