load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_tool_library")

go_tool_library(
    name = "structlayout-pretty_lib",
    srcs = ["main.go"],
    importpath = "honnef.co/go/tools/cmd/structlayout-pretty",
    visibility = ["//visibility:private"],
    deps = ["@co_honnef_go_tools//structlayout:go_default_library"],
)

go_binary(
    name = "structlayout-pretty",
    embed = [":structlayout-pretty_lib"],
    visibility = ["//visibility:public"],
)
