load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_tool_library")

go_tool_library(
    name = "structlayout_lib",
    srcs = ["main.go"],
    importpath = "honnef.co/go/tools/cmd/structlayout",
    visibility = ["//visibility:private"],
    deps = [
        "@co_honnef_go_tools//structlayout:go_default_library",
        "@org_golang_x_tools//go/packages",
    ],
)

go_binary(
    name = "structlayout",
    embed = [":structlayout_lib"],
    visibility = ["//visibility:public"],
)
