load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_tool_library")

go_tool_library(
    name = "ir",
    srcs = [
        "blockopt.go",
        "builder.go",
        "const.go",
        "create.go",
        "doc.go",
        "dom.go",
        "emit.go",
        "exits.go",
        "func.go",
        "html.go",
        "identical.go",
        "identical_17.go",
        "lift.go",
        "lvalue.go",
        "methods.go",
        "mode.go",
        "print.go",
        "sanity.go",
        "source.go",
        "ssa.go",
        "util.go",
        "wrappers.go",
        "write.go",
    ],
    importpath = "honnef.co/go/tools/go/ir",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/ast/astutil:go_tool_library",
        "@org_golang_x_tools//go/types/typeutil:go_tool_library",
    ],
)

go_test(
    name = "ir_test",
    srcs = [
        "builder_test.go",
        "example_test.go",
        "identical_test.go",
        "source_test.go",
        "stdlib_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":ir"],
    deps = [
        "@org_golang_x_tools//go/ast/astutil",
        "@org_golang_x_tools//go/expect",
        "@org_golang_x_tools//go/loader",
        "@org_golang_x_tools//go/packages",
    ],
)
