load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "sharedcheck",
    srcs = ["lint.go"],
    importpath = "honnef.co/go/tools/internal/sharedcheck",
    visibility = ["//:__subpackages__"],
    deps = [
        "@co_honnef_go_tools//internal/passes/buildir:go_default_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)
