load("@io_bazel_rules_go//go:def.bzl", "go_tool_library")

go_tool_library(
    name = "testutil",
    srcs = ["util.go"],
    importpath = "honnef.co/go/tools/lint/testutil",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_tools//go/analysis:go_tool_library",
        "@org_golang_x_tools//go/analysis/analysistest",
    ],
)
