load("@io_bazel_rules_go//go:def.bzl", "go_test", "go_tool_library")

go_tool_library(
    name = "nilness",
    srcs = ["nilness.go"],
    importpath = "honnef.co/go/tools/analysis/facts/nilness",
    visibility = ["//visibility:public"],
    deps = [
        "@co_honnef_go_tools//go/types/typeutil:go_default_library",
        "@co_honnef_go_tools//internal/passes/buildir:go_default_library",
        "@org_golang_x_tools//go/analysis:go_tool_library",
    ],
)

go_test(
    name = "nilness_test",
    srcs = ["nilness_test.go"],
    embed = [":nilness"],
    deps = ["@org_golang_x_tools//go/analysis/analysistest"],
)
